artifacts/macos-x86_64-artifact/dojo.h

struct Controller;
struct Entity;
struct COptionFieldElement;
struct Struct;
struct Ty;
struct EnumOption;
typedef enum PaginationDirection {
  Forward,
  Backward,
} PaginationDirection;
typedef enum PatternMatching {
  FixedLen = 0,
  VariableLen = 1,
} PatternMatching;
typedef struct Error {
  char *message;
} Error;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef struct CArrayFieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArrayFieldElement;
typedef struct COptionc_char {
  COptionc_char_Tag tag;
  union {
    struct {
      const char *some;
    };
  };
} COptionc_char;
typedef struct COptionu32 {
  COptionu32_Tag tag;
  union {
    struct {
      uint32_t some;
    };
  };
} COptionu32;
typedef struct CArrayOrderBy {
  struct OrderBy *data;
  uintptr_t data_len;
} CArrayOrderBy;
typedef struct Pagination {
  struct COptionc_char cursor;
  struct COptionu32 limit;
  enum PaginationDirection direction;
  struct CArrayOrderBy order_by;
} Pagination;
typedef struct CArrayc_char {
  const char **data;
  uintptr_t data_len;
} CArrayc_char;
typedef struct ControllerQuery {
  struct Pagination pagination;
  struct CArrayFieldElement contract_addresses;
  struct CArrayc_char usernames;
} ControllerQuery;
typedef struct CArrayCOptionFieldElement {
  struct COptionFieldElement *data;
  uintptr_t data_len;
} CArrayCOptionFieldElement;
typedef struct KeysClause {
  struct CArrayCOptionFieldElement keys;
  enum PatternMatching pattern_matching;
  struct CArrayc_char models;
} KeysClause;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      int8_t i8;
    };
    struct {
      int16_t i16;
    };
    struct {
      int32_t i32;
    };
    struct {
      int64_t i64;
    };
    struct {
      uint8_t i128[16];
    };
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      struct U256 u256;
    };
    struct {
      bool bool_;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
    struct {
      struct FieldElement eth_address;
    };
  };
} Primitive;
typedef struct CArrayStruct {
  struct Struct *data;
  uintptr_t data_len;
} CArrayStruct;
typedef struct Event {
  struct CArrayFieldElement keys;
  struct CArrayFieldElement data;
  struct FieldElement transaction_hash;
} Event;
typedef struct Controller {
  struct FieldElement address;
  const char *username;
  uint64_t deployed_at_timestamp;
} Controller;
typedef struct Entity {
  struct FieldElement hashed_keys;
  struct CArrayStruct models;
} Entity;
typedef enum COptionFieldElement_Tag {
  SomeFieldElement,
  NoneFieldElement,
} COptionFieldElement_Tag;
typedef struct COptionFieldElement {
  COptionFieldElement_Tag tag;
  union {
    struct {
      struct FieldElement some;
    };
  };
} COptionFieldElement;
typedef struct CArrayMember {
  struct Member *data;
  uintptr_t data_len;
} CArrayMember;
typedef struct Struct {
  const char *name;
  struct CArrayMember children;
} Struct;
typedef struct CArrayEnumOption {
  struct EnumOption *data;
  uintptr_t data_len;
} CArrayEnumOption;
typedef struct Enum {
  const char *name;
  uint8_t option;
  struct CArrayEnumOption options;
} Enum;
typedef struct CArrayTy {
  struct Ty *data;
  uintptr_t data_len;
} CArrayTy;
typedef enum Ty_Tag {
  Primitive_,
  Struct_,
  Enum_,
  Tuple_,
  Array_,
  ByteArray,
} Ty_Tag;
typedef struct Ty {
  Ty_Tag tag;
  union {
    struct {
      struct Primitive primitive;
    };
    struct {
      struct Struct struct_;
    };
    struct {
      struct Enum enum_;
    };
    struct {
      struct CArrayTy tuple;
    };
    struct {
      struct CArrayTy array;
    };
    struct {
      const char *byte_array;
    };
  };
} Ty;
typedef struct EnumOption {
  const char *name;
  struct Ty *ty;
} EnumOption;