Assets/Dojo/Runtime/Bindings/dojo.gen.cs


            public Span<ContractType> contract_types
            {
                get
                {
                    fixed (ContractQuery* @this = &this)
                    {
                        var span = new Span<ContractType>(@this->_contract_types.data, (int)@this->_contract_types.data_len);
                        return span;
                    }
                }

                set
                {

                    _contract_types = new CArrayContractType();
                    _contract_types.data_len = (UIntPtr)value.Length;
                    fixed (ContractType* ptr = value)
                    {
                        _contract_types.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 48, Pack = 8)]
        public struct Controller
        {
            [FieldOffset(0)] // size = 32
            public FieldElement address;

            [FieldOffset(32)] // size = 8
            public CString username_;

            public string username
            {
                get
                {
                    return CString.ToString(username_);
                }
                set
                {
                    username_ = CString.FromString(value);
                }
            }

            [FieldOffset(40)] // size = 8
            public ulong deployed_at_timestamp;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 80, Pack = 8)]
        public struct ControllerQuery
        {
            [FieldOffset(0)] // size = 48
            public Pagination pagination;

            [FieldOffset(48)] // size = 16
            public CArrayFieldElement _contract_addresses;

            public Span<FieldElement> contract_addresses
            {
                get
                {
                    fixed (ControllerQuery* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_contract_addresses.data, (int)@this->_contract_addresses.data_len);
                        return span;
                    }
                }

                set
                {

                    _contract_addresses = new CArrayFieldElement();
                    _contract_addresses.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _contract_addresses.data = ptr;
                    }
                }
            }

            [FieldOffset(64)] // size = 16
            public CArrayc_char _usernames;

            public Span<string> usernames
            {
                get
                {
                    fixed (ControllerQuery* @this = &this)
                    {
                        var span = new Span<CString>(@this->_usernames.data, (int)@this->_usernames.data_len);
                        return span.ToArray().Select(str => CString.ToString(str)).ToArray();
                    }
                }

                set
                {
                    var strings = value.ToArray().Select(str => CString.FromString(str)).ToArray();
                    _usernames = new CArrayc_char();
                    _usernames.data_len = (UIntPtr)value.Length;
                    fixed (CString* ptr = strings)
                    {
                        _usernames.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 72, Pack = 8)]
        public struct Entity
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hashed_keys;

            [FieldOffset(32)] // size = 16
            public CArrayStruct _models;

            public Span<Struct> models
            {
                get
                {
                    fixed (Entity* @this = &this)
                    {
                        var span = new Span<Struct>(@this->_models.data, (int)@this->_models.data_len);
                        return span;
                    }
                }

                set
                {

                    _models = new CArrayStruct();
                    _models.data_len = (UIntPtr)value.Length;
                    fixed (Struct* ptr = value)
                    {
                        _models.data = ptr;
                    }
                }
            }

            [FieldOffset(48)] // size = 8
            public ulong created_at;

            [FieldOffset(56)] // size = 8
            public ulong updated_at;

            [FieldOffset(64)] // size = 8
            public ulong executed_at;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Enum
        {
            [FieldOffset(0)] // size = 8
            public CString name_;

            public string name
            {
                get
                {
                    return CString.ToString(name_);
                }
                set
                {
                    name_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 1
            public byte option;

            [FieldOffset(16)] // size = 16
            public CArrayEnumOption _options;

            public Span<EnumOption> options
            {
                get
                {
                    fixed (Enum* @this = &this)
                    {
                        var span = new Span<EnumOption>(@this->_options.data, (int)@this->_options.data_len);
                        return span;
                    }
                }

                set
                {

                    _options = new CArrayEnumOption();
                    _options.data_len = (UIntPtr)value.Length;
                    fixed (EnumOption* ptr = value)
                    {
                        _options.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct EnumOption
        {
            [FieldOffset(0)] // size = 8
            public CString name_;

            public string name
            {
                get
                {
                    return CString.ToString(name_);
                }
                set
                {
                    name_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public Ty* _ty;

            public Ty ty
            {
                get
                {
                    return *_ty;
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct Error
        {
            [FieldOffset(0)] // size = 8
            public CString message_;

            public string message
            {
                get
                {
                    return CString.ToString(message_);
                }
                set
                {
                    message_ = CString.FromString(value);
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 64, Pack = 8)]
        public struct Event
        {
            [FieldOffset(0)] // size = 16
            public CArrayFieldElement _keys;

            public Span<FieldElement> keys
            {
                get
                {
                    fixed (Event* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_keys.data, (int)@this->_keys.data_len);
                        return span;
                    }
                }

                set
                {

                    _keys = new CArrayFieldElement();
                    _keys.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _keys.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public CArrayFieldElement _data;

            public Span<FieldElement> data
            {
                get
                {
                    fixed (Event* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_data.data, (int)@this->_data.data_len);
                        return span;
                    }
                }

                set
                {

                    _data = new CArrayFieldElement();
                    _data.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _data.data = ptr;
                    }
                }
            }

            [FieldOffset(32)] // size = 32
            public FieldElement transaction_hash;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct FieldElement
        {
            [FieldOffset(0)] // size = 32
            public fixed byte _data[32]; // uint8_t[32]

            public Span<byte> data
            {
                get
                {
                    fixed (FieldElement* @this = &this)
                    {
                        var pointer = &@this->_data[0];
                        var span = new Span<byte>(pointer, 32);
                        return span;
                    }
                }

                set
                {
                    fixed (FieldElement* @this = &this)
                    {
                        var pointer = &@this->_data[0];
                        var span = new Span<byte>(pointer, 32);
                        value.CopyTo(span);
                    }
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct FixedSizeArray
        {
            [FieldOffset(0)] // size = 16
            public CArrayTy _array;

            public Span<Ty> array
            {
                get
                {
                    fixed (FixedSizeArray* @this = &this)
                    {
                        var span = new Span<Ty>(@this->_array.data, (int)@this->_array.data_len);
                        return span;
                    }
                }

                set
                {

                    _array = new CArrayTy();
                    _array.data_len = (UIntPtr)value.Length;
                    fixed (Ty* ptr = value)
                    {
                        _array.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 4
            public uint size;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct KeysClause
        {
            [FieldOffset(0)] // size = 16
            public CArrayCOptionFieldElement _keys;

            public Span<COptionFieldElement> keys
            {
                get
                {
                    fixed (KeysClause* @this = &this)
                    {
                        var span = new Span<COptionFieldElement>(@this->_keys.data, (int)@this->_keys.data_len);
                        return span;
                    }
                }

                set
                {

                    _keys = new CArrayCOptionFieldElement();
                    _keys.data_len = (UIntPtr)value.Length;
                    fixed (COptionFieldElement* ptr = value)
                    {
                        _keys.data = ptr;
                    }
                }
            }
